@@ -23,6 +23,10 @@ pipeline {
             value: 'jenkins-k8s-config'
           - name: HOME
             value: /home/jenkins
+          - name: JAVA_TOOL_OPTIONS
+            value: '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dsun.zip.disableMemoryMapping=true -Xms1024m -Xmx4g'
+          - name: MAVEN_OPTS
+            value: -Xmx8g -Xms1024m -XX:MaxPermSize=512m -Xss8m
           resources:
             requests:
               memory: 4Gi
